--- a/bhoma/xforms/bhoma_under_five.xhtml
+++ b/bhoma/xforms/bhoma_under_five.xhtml
@@ -95,6 +95,7 @@
 		<primary_diagnosis_one />
 		<primary_diagnosis_two />
 		<diagnosis />
+		<diagnosis_other />
         <drugs>
           <prescribed>
             <med jr:template="">
@@ -223,7 +224,8 @@
 	<bind nodeset="primary_diagnosis_one" required="true()" />
 	<bind nodeset="primary_diagnosis_two" required="true()" relevant="../primary_diagnosis_one = 'more_options'" />
 	<bind nodeset="diagnosis" calculate="if(../primary_diagnosis_one != 'more_options', ../primary_diagnosis_one, ../primary_diagnosis_two)" />
-	<bind nodeset="drugs/prescribed/med/common_drug_one" required="true()" />
+	<bind nodeset="diagnosis_other" relevant="../diagnosis = 'other'" />
+    <bind nodeset="drugs/prescribed/med/common_drug_one" required="true()" />
 	<bind nodeset="drugs/prescribed/med/common_drug_two" required="true()" relevant="../common_drug_one = 'more_options'" />
 	<bind nodeset="drugs/prescribed/med/common_drug" calculate="if(../common_drug_one != 'more_options', ../common_drug_one, ../common_drug_two)" />
     <bind nodeset="drugs/prescribed/med/uncommon" relevant="../common_drug = 'enter_manually'" />
@@ -751,6 +753,11 @@
 	<item><label>Section Left Blank</label><value>blank</value></item>
 	<hint>Select the primary diagnosis for the patient.  If you don't see your answer here, click the 'Back' button.</hint>
   </select1>
+  
+  <input ref="diagnosis_other" appearance="domain: alpha;">
+    <label>Enter 'Other' Primary Diagnosis</label>
+    <hint> Select the primary diagnosis written in on the form where the 'Other' box was checked. If a diagnosis was written that is not on this list, select 'other diagnosis not listed'. If the write-in space is blank, select 'no diagnosis provided' </hint>
+  </input>
   
   <group>
   <label>Prescribed Drug</label>
