update "previous diagnosis" field to be appropriate per-form

--- a/bhoma/xforms/bhoma_sick_pregnancy.xhtml
+++ b/bhoma/xforms/bhoma_sick_pregnancy.xhtml
@@ -297,39 +297,39 @@
   
   <select1 ref="prev_encounter_diagnosis_one">
     <label>Select the Previous Primary Diagnosis (page 1 of 2)</label>
-    <item><label>Undernutrition</label><value>undernutrition</value></item>
-    <item><label>Wasting Syndrome</label><value>wasting_syndrome</value></item>
-    <item><label>RTI: Pneumonia</label><value>rti_pneumonia</value></item>
-    <item><label>RTI: Non Pneumonia</label><value>rti_non_pneumonia</value></item>
-    <item><label>TB</label><value>tb</value></item>
-    <item><label>Cardiac Failure</label><value>cardiac_failure</value></item>
-    <item><label>Other Chest Condition</label><value>other_chest_cond</value></item>
-    <item><label>UTI</label><value>uti</value></item>
-    <item><label>STI</label><value>sti</value></item>
-    <item><label>PID</label><value>pid</value></item>
-    <item><label>Other Abdominal Condition</label><value>other_abdominal_cond</value></item>
-    <item><label>ENT Condition</label><value>ent</value></item>
-    <item><label>Malaria</label><value>malaria</value></item>    
+    <item><label>Eclampsia</label><value>eclampsia</value></item>
+    <item><label>Severe Preeclampsia</label><value>severe_preeclampsia</value></item>
+    <item><label>Mild Preeclampsia</label><value>mild_preeclampsia</value></item>
+    <item><label>Gestational Hypertension</label><value>gestational_hypertension</value></item>
+    <item><label>Chronic Hypertension</label><value>chronic_hypertension</value></item>
+    <item><label>Malaria</label><value>malaria</value></item>
     <item><label>Meningitis</label><value>meningitis</value></item>
-    <item><label>Other Febrile Disease</label><value>other_febrile_dis</value></item>     
+    <item><label>Pneumonia</label><value>pneumonia</value></item>
+    <item><label>Uterine Infection</label><value>uterine_infec</value></item>
+    <item><label>Kidney Infection</label><value>kidney_infec</value></item>
+    <item><label>Placental Abruption</label><value>placental_abruption</value></item>
+    <item><label>Placenta Previa</label><value>placenta_previa</value></item>
+    <item><label>Vag/Cervical Laceration</label><value>vaginal_laceration</value></item>
+    <item><label>Ectopic Pregnancy</label><value>ectopic</value></item>    
+    <item><label>Miscarriage (&lt; 28wks)</label><value>miscarriage</value></item>
     <item><label>See More Options</label><value>more_options</value></item>
     <hint>Select the previous primary diagnosis for the patient. </hint>
   </select1>
 
   <select1 ref="prev_encounter_diagnosis_two">
     <label>Select the Previous Primary Diagnosis (page 2 of 2)</label>   
-    <item><label>Acute Diarrhoea</label><value>acute_diarrhea</value></item>
-    <item><label>Persistent Diarrhoea</label><value>persistent_diarrhea</value></item>
-    <item><label>Dysentry</label><value>dysentry</value></item>
-    <item><label>Dehydration</label><value>dehydration</value></item>
-    <item><label>Malignancy</label><value>malignancy</value></item>
-    <item><label>Skin Infection</label><value>skin_infection</value></item>
-    <item><label>Diabetes</label><value>diabetes</value></item>
-    <item><label>Stroke</label><value>stroke</value></item>
+    <item><label>Contractions (false labour)</label><value>contractions</value></item>      
+    <item><label>Preterm Labour</label><value>preterm_labour</value></item>
+    <item><label>Term Labour</label><value>term_labour</value></item>
+    <item><label>PROM</label><value>prom</value></item>
+    <item><label>PPROM (28-36 weeks)</label><value>pprom_36_weeks</value></item>
+    <item><label>PPROM (&lt; 28 weeks)</label><value>pprom_28_weeks</value></item>
+    <item><label>Uterine Infection</label><value>uterine_infection</value></item>
+    <item><label>Fetal Distress</label><value>fetal_distress</value></item>
+    <item><label>UTI</label><value>uti</value></item>
+    <item><label>Anaemia</label><value>anemia</value></item>
     <item><label>Trauma</label><value>trauma</value></item>
-    <item><label>Anaemia</label><value>anaemia</value></item>
-    <item><label>Seizure</label><value>seizure</value></item>
-    <item><label>Hypertension</label><value>hypertension</value></item>
+    <item><label>AIDS</label><value>aids</value></item>
     <item><label>Other</label><value>other</value></item>
     <item><label>Section Left Blank</label><value>blank</value></item>
     <hint>Select the previous primary diagnosis for the patient.  If you don't see your answer here, click the 'Back' button.</hint>
