--- a/bhoma/xforms/bhoma_under_five.xhtml
+++ b/bhoma/xforms/bhoma_under_five.xhtml
@@ -320,39 +320,37 @@
   
   <select1 ref="prev_encounter_diagnosis_one">
     <label>Select the Previous Primary Diagnosis (page 1 of 2)</label>
-    <item><label>Undernutrition</label><value>undernutrition</value></item>
-    <item><label>Wasting Syndrome</label><value>wasting_syndrome</value></item>
-    <item><label>RTI: Pneumonia</label><value>rti_pneumonia</value></item>
-    <item><label>RTI: Non Pneumonia</label><value>rti_non_pneumonia</value></item>
-    <item><label>TB</label><value>tb</value></item>
-    <item><label>Cardiac Failure</label><value>cardiac_failure</value></item>
+    <item><label>RTI:Non-pneumonia</label><value>rti_non_pneumonia</value></item>
+    <item><label>RTI:Pneumonia</label><value>rti_pneumonia</value></item>
     <item><label>Other Chest Condition</label><value>other_chest_cond</value></item>
-    <item><label>UTI</label><value>uti</value></item>
-    <item><label>STI</label><value>sti</value></item>
-    <item><label>PID</label><value>pid</value></item>
-    <item><label>Other Abdominal Condition</label><value>other_abdominal_cond</value></item>
-    <item><label>ENT Condition</label><value>ent</value></item>
-    <item><label>Malaria</label><value>malaria</value></item>    
+    <item><label>Acute Diarrhoea</label><value>acute_diarrhea</value></item>
+    <item><label>Persistent Diarrhoea</label><value>persistent_diarrhea</value></item>
+    <item><label>Dysentry</label><value>dysentry</value></item>
+    <item><label>Dehydration</label><value>dehydration</value></item>
+    <item><label>Malaria</label><value>malaria</value></item> 
+    <item><label>Measles</label><value>measles</value></item>
     <item><label>Meningitis</label><value>meningitis</value></item>
-    <item><label>Other Febrile Disease</label><value>other_febrile_dis</value></item>     
+    <item><label>Other Febrile Disease</label><value>other_febrile_disease</value></item>
+    <item><label>Mastoiditis</label><value>mastoiditis</value></item>
+    <item><label>Acute Ear Infection</label><value>acute_ear_infection</value></item>
+    <item><label>Chronic Ear Infection</label><value>chronic_ear_infection</value></item>
     <item><label>See More Options</label><value>more_options</value></item>
     <hint>Select the previous primary diagnosis for the patient. </hint>
   </select1>
 
   <select1 ref="prev_encounter_diagnosis_two">
     <label>Select the Previous Primary Diagnosis (page 2 of 2)</label>   
-    <item><label>Acute Diarrhoea</label><value>acute_diarrhea</value></item>
-    <item><label>Persistent Diarrhoea</label><value>persistent_diarrhea</value></item>
-    <item><label>Dysentry</label><value>dysentry</value></item>
-    <item><label>Dehydration</label><value>dehydration</value></item>
-    <item><label>Malignancy</label><value>malignancy</value></item>
-    <item><label>Skin Infection</label><value>skin_infection</value></item>
-    <item><label>Diabetes</label><value>diabetes</value></item>
-    <item><label>Stroke</label><value>stroke</value></item>
+    <item><label>Severe Malnutrition</label><value>sev_malnutrition</value></item>
+    <item><label>Very Low Weight</label><value>very_low_weight</value></item>
+    <item><label>Low Weight</label><value>low_weight</value></item>
+    <item><label>Jaundice</label><value>jaundice</value></item>
+    <item><label>Other ENT Problem</label><value>other_ent_prob</value></item>
+    <item><label>Intestinal Worms</label><value>intestinal_worms</value></item>
     <item><label>Trauma</label><value>trauma</value></item>
     <item><label>Anaemia</label><value>anaemia</value></item>
-    <item><label>Seizure</label><value>seizure</value></item>
-    <item><label>Hypertension</label><value>hypertension</value></item>
+    <item><label>Skin Infection</label><value>skin_infection</value></item>
+    <item><label>Skin Disease Non-Infectious</label><value>skin_disease</value></item>
+    <item><label>Eye Infection</label><value>eye_infection</value></item>
     <item><label>Other</label><value>other</value></item>
     <item><label>Section Left Blank</label><value>blank</value></item>
     <hint>Select the previous primary diagnosis for the patient.  If you don't see your answer here, click the 'Back' button.</hint>
